# Simulation

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README.txt  Simulation.cbp
src/: C_api.cpp  C_api.hpp  Graphics.cpp  Robot.c  Robot.cpp  Servo.c  Sim.cpp  Sim.hpp  SimpleFK.cpp  Test.cpp  Utils.cpp  WorldFrame.cpp
src/C/: code_view.txt  data_structures.h  layers.c  layers.h  macros.h  main.c  main.h  matrix_op.c  matrix_op.h  model.c  model.h  rl.c  rl.h  tests.c  tests.h  utils.c  utils.h
src/GUI/: Drawable.cpp  Drawable.hpp  GLGraphics.cpp  GLGraphics.hpp  GLWidgets.cpp  GLWidgets.hpp  GUIMain.cpp  QtMainWindow.cpp  QtMainWindow.hpp  QtWindow.cpp  QtWindow.hpp  UIUtils.cpp  UIUtils.hpp  glwidget.cpp  glwidget.h  hellogl2.pro  logo.cpp  logo.h  main.cpp  window.h
src/include/: Test.h  Utils.h  WorldFrame.h
src/model/: AngularKinematics.cpp  AngularKinematics.hpp  Benchmark.cpp  Constraints.cpp  Constraints.hpp  FwdKM.c  FwdKM.h  InvKM.c  InvKM.h  KinematicsModel.cpp  KinematicsModel.hpp  Trajectory.cpp  Trajectory.hpp  bm
src/utils/: Utils.cpp  Utils.hpp
